<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meetup Point</string>
    <string name="app_id">623048194426303</string>
    <string name="API_KEY">AIzaSyD9RK_IJn1uelWxqeDPvTm0GvZHvPFwE9Y</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="hello_world">Hello world!</string>

    <!-- Start Activity -->
    <string name="intro">Sign in to see and create events with your closest friends.</string>
    <string name="signin_facebook"><b>Log in with Facebook</b></string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="or">or</string>
    <string name="title_activity_new_event">Create event</string>
    <string name="dialog_confirm">Reset</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_enter_email">Enter your email address to create new password.</string>
    <string name="dialog_title">Forgot your password?</string>
    <string name="dialog_error_invalid_email">Invalid email</string>
    <string name="dialog_error_empty_email">Enter email</string>
    <string name="dialog_error_nonexsisting_email">Email not found</string>
    <string name="title_activity_initial">InitialActivity</string>

    <!-- IntroSignUp Activity -->
    <string name="link"><u>Sign up with email</u></string>
    <string name="link_facebook"><u>Log in with Facebook</u></string>
    <string name="text_get_started">It\'s easy to get started.</string>
    <string name="text_login_facebook">Just login with Facebook and get instant access to your events.</string>
    <string name="text_dont_have_fb"> Don\'t have Facebook? </string>

    <!-- Login Activity -->
    <string name="text_login_distt">or login with your <b>distt</b> details</string>

    <!-- CreateEventActivity -->

    <string name="hint_event_name">Event Name</string>
    <string name="hint_event_details"> Details</string>
    <string name="hint_address"> Location</string>
    <string name="hint_date"><b>Today</b></string>
    <string name="hint_time">Time</string>
    <string name="hint_people_invited"><b>People invited (0)</b></string>
    <string name="button_find">Find</string>
    <string name="button_sms">sms</string>
    <string name="button_email">email</string>
    <string name="button_facebook_message">FB message</string>
    <string name="invite_friends">You can invite your friends by:</string>
    <string name="title_activity_intro_sign_up">IntroSignUpActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="title_activity_time_picker_fragment">TimePickerFragment</string>
    <string name="title_activity_verify_google_play_service">VerifyGooglePlayService</string>

    <!-- Location Activity -->

    <string name="hint_search_place">Search place</string>
    <string name="title_activity_error_dialog_fragment">ErrorDialogFragment</string>
    <string name="edit_search_location">Search places</string>

    <!-- ErrorDialog Fragment to enable GPS -->
    <string name="dialog_text">To add more accurate locations to your events, turn on GPS and wireless networks in Location Settings. </string>
    <string name="dialog_skip">Skip</string>
    <string name="dialog_settings">Settings</string>
    <string name="dialog_location_title">Turn on Location</string>
    <string name="title_activity_download_places_task">DownloadPlacesTask</string>
    <string name="title_activity_download_data_http">DownloadDataHttp</string>
    <string name="title_activity_test_json">TestJsonActivity</string>
    <string name="title_activity_autocomplete_task">AutocompleteTask</string>
    <string name="title_activity_places_auto_complete_adapter">PlacesAutoCompleteAdapter</string>

</resources>
