    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
   		xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".CreateEventActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <EditText
                 android:id="@+id/editName"
		         android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:inputType="textCapSentences"
                 android:hint="@string/hint_event_name"
                 />
            
            <EditText
                 android:id="@+id/editDetails"
		         android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:inputType="textCapSentences"
                 android:hint="@string/hint_event_details"
                 />
            
            <EditText  
				    android:id="@+id/editLocation"
				    android:layout_height="wrap_content" 
				    android:layout_width="match_parent"
				    android:layout_marginTop="10dp"
				    android:paddingLeft="12dp"
				    android:hint="@string/hint_address"
				    android:inputType="textPostalAddress"
				    android:drawableRight="@drawable/ic_action_place"
				    style="?android:attr/spinnerStyle">
				</EditText>
				
	             <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >
	                
	                <EditText  
					    android:id="@+id/editDate"
					    android:layout_height="wrap_content" 
					    android:layout_width="200dp"
					    android:layout_marginTop="10dp"
					    android:paddingLeft="12dp"
					    android:layout_weight="1"
					    android:hint="@string/hint_date"
					    style="?android:attr/spinnerStyle"
					    android:textColor="@color/black">
					    
					</EditText>
					
					<EditText  
					    android:id="@+id/editTime"
					    android:layout_height="wrap_content" 
					    android:layout_width="200dp"
					    android:layout_marginTop="10dp"
					    android:paddingLeft="12dp"
					    android:layout_weight="1"
					    android:hint="@string/hint_time"
					    style="?android:attr/spinnerStyle">
					</EditText>
				 </LinearLayout> 
				 
	             <EditText
	                 android:id="@+id/editPeople"
			         android:layout_width="match_parent"
	                 android:layout_height="wrap_content"
	                 android:layout_marginTop="10dp"
	                 android:paddingLeft="12dp"
	                 android:hint="@string/hint_people_invited"
	                 style="?android:attr/spinnerStyle"/> 
                
			
        	</LinearLayout>
    	</ScrollView>
